feat: search chat